--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ a {
   color: black;
 }
 
-.nav-vaar-custom {
+.nav-var-custom {
   background-color: #5de6de;
   background-image: linear-gradient(315deg, #5de6de 0%, #b58ecc 74%);
   color: black;
